[package]
name = "bullet-bot"
version = "0.1.0"
authors = ["QKharma"]
edition = "2021"

[dependencies]
serenity = "0.10"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0" }
chrono = { version = "0.4" }